
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2017-01-20 DariusIII
	Fix: Change leftover references to group_id in python scripts and ProcessReleases class
2017-01-20 niel
	Chg: Removed Default theme's pager.tpl and added a new one in shared templates.
	Chg: Moved Group listing in Admin => Site Settings => Groups => List to use new pager.tpl
		**NOTE** The pager now uses page numbers for its internal workings instead of calculating
		 offsets for all links.
2017-01-19 niel
	Chg: Replace nzedb\Groups::getByID array with app\model\Groups::findByID() object.
	Add: findRange() convenience method in Groups model to mimic nzedb\Groups::getRange().
		**NOTE** It does not JOIN with the releases table to fetch number of releases using each
		group, as that is not used for the group list in Admin => Site Settings => Groups. I'll
		create a separate method for that purpose if needed.
2017-01-17 niel
	Mrg: dev-db branch which contains changes to binaries, collections, missed, and parts tables.
2017-01-16 niel
	Fix: Work around to prevent some db versions auto-incrementing an explicit 0 for Categories Other's.
2017-01-12 DariusIII
	Fix: Predb page link for predb search (closes issue #2356)
2017-01-11 niel
	Mrg: PR 2353, from kaibosh - Check for incompatible tmux versions and abort if installed.
	Chg: Make kaibosh's fix use version_compare function.
2017-01-09 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.8.1


2017-01-09
	Fix: Paths for install.sh script.
2017-01-02 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.8.0


2016-12-27 niel
	Mrg: PR 2346, from kaibosh - Correct powerline tmux config.